--- a/postgres-adapter/pom.xml
+++ b/postgres-adapter/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -60,7 +61,6 @@
             <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -70,6 +70,9 @@
                 <artifactId>qulice-maven-plugin</artifactId>
                 <configuration>
                     <license>LICENSE.txt</license>
+                    <excludes>
+                        <exclude>findbugs:postgres.PgAdapter</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
